Email config variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DEBUD_VALUE=True|False
 SECRET_KEY=YOUR_SECRET_KEY
 ALLOWED_HOSTS=example_host_1, example_host_2
+EMAIL_HOST_USER=YOUR_EMAIL
+EMAIL_HOST_PASSWORD=YOUR_EMAIL_APP_PASSWORD
